# sigcraft

./: .gitignore  BitMask.hpp  CMakeLists.txt  README.md  aabb.h  benchmark.cpp  benchmark.h  camera.cpp  camera.h  chunk_access.cpp  chunk_access.h  chunk_mesh.cpp  chunk_mesh.h  frustum.h  game.cpp  game.h  main.cpp  shaders.h  texture.cpp  texture.hpp  voxel.cpp  voxel.h  world.cpp  world.h
enklume/include/enklume/: block_data.h
enklume/src/: block_data.c
shaders/: Box.glsl  basic.vert  greedyVoxel.vert  intersect.glsl  outline_billboards.frag  visualize_billboards.frag  voxel.frag  voxel.vert
